[tool.poetry]
name = "updater"
version = "0.0.2"
description = ""
authors = ["Stax124 <tamoncz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"
rich = "^12.4.4"
requests = "^2.28.0"
urllib3 = "^1.26.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
